--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,9 +2,17 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+  font-family: Nexa, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+
+    background: url("/static/background.png"); 
+
+    background-position: 50%;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
+
+
 
 a {
   color: inherit;
@@ -13,4 +21,48 @@ a {
 
 * {
   box-sizing: border-box;
+}
+
+h1, 
+h2,
+h3,
+h4,
+h5, 
+h6, 
+hr, 
+p,
+
+pre {
+  margin: 0; 
+}
+
+button {
+  background-color: transparent;
+  background-image: none;
+  font-weight: 600;
+}
+
+button:focus {
+  outline: 1px dotted; 
+  outline: 5px auto -webkit-focus-ring-color; 
+}
+
+.glass {
+  background: hsla(0, 0%, 100%, 0.4);
+  -webkit-backdrop-filter: blur(10px);
+  backdrop-filter: blur(10px);
+  border: 1px solid hsla(0, 0%, 100%, 0.2);
+}
+
+.glass:hover {
+  background: hsla(0, 0%, 100%, 0.7);
+  border: 1px solid #fff;
+}
+
+
+:root {
+  --text-purple-dark: rgba(49, 73, 160); 
+  --text-black: rgba(17,24,39,1);
+  --text-white-100: rgba(229,231,235,1);
+ 
 }
