--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -64,7 +64,9 @@
 
   .heroImage {
     right: 20%;
-    margin-top: 3rem 
+    margin-top: 3rem; 
+    width: 350; 
+    height: 300; 
   }
   .cardLayout {
     grid-template-columns: repeat(2, minmax(0, 1fr));
@@ -83,7 +85,9 @@
 
   .heroImage {
     right: 4%;
-    margin-top: 3rem 
+    margin-top: 3rem; 
+    width: 350; 
+    height: 300; 
   }
 
   .cardLayout {
@@ -93,17 +97,19 @@
 
 @media (min-width: 1024px) {
   .container {
-    padding-left: 2.5rem /* 40px */;
+    padding-left: 0.5rem /* 40px */;
     padding-right: 2.5rem /* 40px */;
   }
   .main {
     margin-top: 5rem /* 80px */;
-    padding-left: 2rem /* 32px */;
+    padding-left: 0.5rem /* 32px */;
     padding-right: 2rem /* 32px */;
   }
   .heroImage {
     right: 4%;
-    margin-top: 3rem 
+    margin-top: 3rem;
+    width: 350; 
+    height: 300; 
   }
   .cardLayout {
     grid-template-columns: repeat(3, minmax(0, 1fr));
