--- a/components/banner.module.css
+++ b/components/banner.module.css
@@ -40,7 +40,7 @@
     color: white;
     outline: 0;
     border: 0px;
-    border-radius: 50;
+    border-radius: 10px;
   
     padding-top: 1rem /* 16px */;
     padding-bottom: 1rem /* 16px */;
